chore: fix concurrent tests with log output pollution